--- a/index.html
+++ b/index.html
@@ -4,34 +4,39 @@
   <title>BIG DADDY GAMES</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {margin:0;background:#000;color:#fff;font-family:Arial;text-align:center;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);}
+    body {margin:0;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial;text-align:center;padding:20px;}
     h1 {font-size:3.5em;color:#FF00FF;text-shadow:0 0 30px #FF00FF;}
-    .bio img {border-radius:50%;width:250px;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;}
-    .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:10px;padding:20px;}
-    .gallery img {width:100%;border-radius:12px;}
-    iframe {margin:20px auto;display:block;border:3px solid #FF00FF;border-radius:12px;}
+    .bio img {border-radius:50%;width:250px;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px;}
+    .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px;padding:20px;}
+    .gallery img {width:100%;border-radius:15px;box-shadow:0 0 20px #9370DB;}
+    iframe {width:90%;max-width:800px;height:450px;margin:30px auto;display:block;border:5px solid #FF00FF;border-radius:15px;}
   </style>
 </head>
 <body>
   <h1>BIG DADDY GAMES 🔥</h1>
+  
   <div class="bio">
-    <h2>MEET BIG DADDY2025</h2>
-    <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy">
-    <p style="font-size:1.4em;max-width:800px;margin:20px auto;">Grinding since PS2. Raw reviews, hidden gems, GTA VI leaks, Black Myth boss kills. No sponsors. Pure chaos and passion. Squad up or get left behind.</p>
+    <h2 style="color:#FF00FF;text-shadow:0 0 15px #FF00FF;">MEET BIG DADDY2025</h2>
+    <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy Cyber Portrait">
+    <p style="font-size:1.4em;max-width:900px;margin:20px auto;">
+      Yo, I’m BIGDADDY2025 — grinding since PS2 days. Raw reviews, hidden gems under $10, GTA VI leak breakdowns, Black Myth boss rushes, Starfield redemption arcs. No sponsors, no filters, just pure gaming chaos and passion. Squad up or get left behind.
+    </p>
   </div>
 
   <div class="gallery">
-    <!-- 100+ images that actually load -->
-    <img src="https://picsum.photos/seed/game1/800/600">
-    <img src="https://picsum.photos/seed/game2/800/600">
-    <img src="https://picsum.photos/seed/game3/800/600">
-    <!-- Add as many as you want — they all work forever -->
+    <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800">
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800">
+    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800">
+    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800">
+    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800">
+    <!-- Add 95 more anytime — these load instantly -->
   </div>
 
-  <h2 style="color:#00FFFF;text-shadow:0 0 20px #00FFFF;">25+ VIDEOS</h2>
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/QdBZY2fkYvs" allowfullscreen></iframe>
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/21X_7KMGjIs" allowfullscreen></iframe>
+  <h2 style="color:#00FFFF;text-shadow:0 0 20px #00FFFF;">25+ EPIC VIDEOS</h2>
+  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" allowfullscreen></iframe> <!-- GTA VI Trailer -->
+  <iframe src="https://www.youtube.com/embed/21X_7KMGjIs" allowfullscreen></iframe> <!-- Black Myth Gameplay -->
+  <iframe src="https://www.youtube.com/embed/oNdA9tYT7wM" allowfullscreen></iframe>
 
-  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES | Built by you, unbreakable.</p>
+  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES | Built by you, unbreakable 💜</p>
 </body>
 </html>
