Enhance HTML structure and accessibility features
Updated iframe styles and added titles for better accessibility. Modified image tags to include alt attributes and changed the heading and footer text.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .bio img {border-radius:50%;width:250px;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px;}
     .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px;padding:20px;}
     .gallery img {width:100%;border-radius:15px;box-shadow:0 0 20px #9370DB;}
-    iframe {width:90%;max-width:800px;height:450px;margin:30px auto;display:block;border:5px solid #FF00FF;border-radius:15px;}
+    iframe {width:90%;max-width:800px;height:450px;margin:30px auto;display:block;border:5px solid #FF00FF;border-radius:15px;box-shadow:0 0 30px #FF00FF;}
   </style>
 </head>
 <body>
@@ -24,19 +24,18 @@
   </div>
 
   <div class="gallery">
-    <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800">
-    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800">
-    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800">
-    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800">
-    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800">
-    <!-- Add 95 more anytime — these load instantly -->
+    <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800" alt="RGB Setup">
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800" alt="Gaming Controller">
+    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800" alt="Epic Gaming">
+    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800" alt="Boss Fight">
+    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800" alt="GTA Vibes">
   </div>
 
-  <h2 style="color:#00FFFF;text-shadow:0 0 20px #00FFFF;">25+ EPIC VIDEOS</h2>
-  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" allowfullscreen></iframe> <!-- GTA VI Trailer -->
-  <iframe src="https://www.youtube.com/embed/21X_7KMGjIs" allowfullscreen></iframe> <!-- Black Myth Gameplay -->
-  <iframe src="https://www.youtube.com/embed/oNdA9tYT7wM" allowfullscreen></iframe>
+  <h2 style="color:#00FFFF;text-shadow:0 0 20px #00FFFF;">25+ EPIC VIDEOS (Now Playing!)</h2>
+  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" title="GTA VI Trailer" allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/21X_7KMGjIs" title="Black Myth Wukong Gameplay" allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/oNdA9tYT7wM" title="Starfield Update" allowfullscreen></iframe>
 
-  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES | Built by you, unbreakable 💜</p>
+  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES | Your empire, unbreakable 💜</p>
 </body>
 </html>
