--- a/index.html
+++ b/index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BIG DADDY GAMES</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {margin:0;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial;text-align:center;padding:20px;}
+    body {margin:0;padding:20px;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial,sans-serif;text-align:center;}
     h1 {font-size:3.5em;color:#FF00FF;text-shadow:0 0 30px #FF00FF;}
-    .bio img {border-radius:50%;width:250px;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px;}
-    .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px;padding:20px;}
-    .gallery img {width:100%;border-radius:15px;box-shadow:0 0 20px #9370DB;}
-    iframe {width:90%;max-width:800px;height:450px;margin:30px auto;display:block;border:5px solid #FF00FF;border-radius:15px;box-shadow:0 0 30px #FF00FF;}
+    h2 {color:#00FFFF;text-shadow:0 0 20px #00FFFF;}
+    .bio img {width:250px;height:250px;border-radius:50%;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px auto;display:block;}
+    .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;padding:20px;}
+    .gallery img {width:100%;border-radius:15px;box-shadow:0 0 30px #9370DB;}
+    iframe {width:90%;max-width:900px;height:500px;margin:30px auto;display:block;border:8px solid #FF00FF;border-radius:20px;box-shadow:0 0 40px #FF00FF;}
   </style>
 </head>
 <body>
   <h1>BIG DADDY GAMES 🔥</h1>
   
   <div class="bio">
-    <h2 style="color:#FF00FF;text-shadow:0 0 15px #FF00FF;">MEET BIG DADDY2025</h2>
-    <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy Cyber Portrait">
-    <p style="font-size:1.4em;max-width:900px;margin:20px auto;">
-      Yo, I’m BIGDADDY2025 — grinding since PS2 days. Raw reviews, hidden gems under $10, GTA VI leak breakdowns, Black Myth boss rushes, Starfield redemption arcs. No sponsors, no filters, just pure gaming chaos and passion. Squad up or get left behind.
+    <h2>MEET BIG DADDY2025</h2>
+    <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy Portrait">
+    <p style="font-size:1.4em;max-width:900px;margin:30px auto;">
+      Grinding since PS2. Raw reviews, hidden gems under $10, GTA VI leaks, Black Myth boss kills, Starfield redemption. No sponsors. Pure chaos.
     </p>
   </div>
 
   <div class="gallery">
+    <h2>100+ GAMING IMAGES</h2>
     <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800" alt="RGB Setup">
-    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800" alt="Gaming Controller">
-    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800" alt="Epic Gaming">
-    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800" alt="Boss Fight">
-    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800" alt="GTA Vibes">
-  </div>
-
-  <h2 style="color:#00FFFF;text-shadow:0 0 20px #00FFFF;">25+ EPIC VIDEOS (Now Playing!)</h2>
-  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" title="GTA VI Trailer" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/21X_7KMGjIs" title="Black Myth Wukong Gameplay" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/oNdA9tYT7wM" title="Starfield Update" allowfullscreen></iframe>
-
-  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES | Your empire, unbreakable 💜</p>
-</body>
-</html>
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800" alt="Controller Glow">
+    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800" alt="Gaming Room">
+    <img src="https://images.unsplash.com/photo-1610945265069
