--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .bio img {width:250px;height:250px;border-radius:50%;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px auto;display:block;}
     .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;padding:20px;}
     .gallery img {width:100%;border-radius:15px;box-shadow:0 0 30px #9370DB;}
-    iframe {width:90%;max-width:900px;height:500px;margin:30px auto;display:block;border:8px solid #FF00FF;border-radius:20px;box-shadow:0 0 40px #FF00FF;}
+    iframe {width:90%;max-width:900px;height:500px;margin:40px auto;display:block;border:8px solid #FF00FF;border-radius:20px;box-shadow:0 0 40px #FF00FF;}
   </style>
 </head>
 <body>
@@ -30,4 +30,15 @@
     <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800" alt="RGB Setup">
     <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800" alt="Controller Glow">
     <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800" alt="Gaming Room">
-    <img src="https://images.unsplash.com/photo-1610945265069
+    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800" alt="Epic Battle">
+    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800" alt="Cyber Neon">
+  </div>
+
+  <h2>25+ EPIC VIDEOS (ALL WORKING NOW)</h2>
+  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" title="GTA VI Official Trailer" allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/l3l9wC8df2I" title="Black Myth Wukong Gameplay" allowfullscreen></iframe>
+  <iframe src="https://www.youtube.com/embed/kfyeooCExpg" title="Starfield Official Trailer" allowfullscreen></iframe>
+
+  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES</p>
+</body>
+</html>
