--- a/index.html
+++ b/index.html
@@ -42,3 +42,12 @@
   <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BIG DADDY GAMES</title>
+  <style>
+    body {margin:0;padding:20px;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial,sans-serif;text-align:center;}
+    h1
