--- a/index.html
+++ b/index.html
@@ -1,53 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BIG DADDY GAMES</title>
-  <style>
-    body {margin:0;padding:20px;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial,sans-serif;text-align:center;}
-    h1 {font-size:3.5em;color:#FF00FF;text-shadow:0 0 30px #FF00FF;}
-    h2 {color:#00FFFF;text-shadow:0 0 20px #00FFFF;}
-    .bio img {width:250px;height:250px;border-radius:50%;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px auto;display:block;}
-    .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;padding:20px;}
-    .gallery img {width:100%;border-radius:15px;box-shadow:0 0 30px #9370DB;}
-    iframe {width:90%;max-width:900px;height:500px;margin:40px auto;display:block;border:8px solid #FF00FF;border-radius:20px;box-shadow:0 0 40px #FF00FF;}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BIG DADDY GAMES</title>
+<style>
+  body {margin:0;padding:20px;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial;text-align:center;}
+  h1 {font-size:3.5em;color:#FF00FF;text-shadow:0 0 30px #FF00FF;}
+  h2 {color:#00FFFF;text-shadow:0 0 20px #00FFFF;}
+  .bio img {width:250px;height:250px;border-radius:50%;border:6px solid #FF00FF;box-shadow:0 0 40px #FF00FF;margin:20px;}
+  .gallery {display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;padding:20px;}
+  .gallery img {width:100%;border-radius:15px;box-shadow:0 0 30px #9370DB;}
+  iframe {width:90%;max-width:900px;height:500px;margin:40px auto;display:block;border:8px solid #FF00FF;border-radius:20px;}
+  #quiz {max-width:800px;margin:50px auto;background:rgba(0,0,0,0.6);padding:20px;border-radius:15px;}
+  button {background:#FF00FF;padding:10px 20px;border:none;border-radius:10px;color:#000;font-weight:bold;cursor:pointer;}
+</style>
 </head>
 <body>
-  <h1>BIG DADDY GAMES 🔥</h1>
-  
-  <div class="bio">
-    <h2>MEET BIG DADDY2025</h2>
-    <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy Portrait">
-    <p style="font-size:1.4em;max-width:900px;margin:30px auto;">
-      Grinding since PS2. Raw reviews, hidden gems under $10, GTA VI leaks, Black Myth boss kills, Starfield redemption. No sponsors. Pure chaos.
-    </p>
-  </div>
+<h1>BIG DADDY GAMES 🔥</h1>
 
-  <div class="gallery">
-    <h2>100+ GAMING IMAGES</h2>
-    <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800" alt="RGB Setup">
-    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800" alt="Controller Glow">
-    <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800" alt="Gaming Room">
-    <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800" alt="Epic Battle">
-    <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800" alt="Cyber Neon">
-  </div>
+<div class="bio">
+  <h2>MEET BIG DADDY2025</h2>
+  <img src="https://i.imgur.com/2f8Yb8F.png" alt="Big Daddy">
+  <p style="font-size:1.4em;max-width:900px;margin:30px auto;">Grinding since PS2. Raw reviews, hidden gems, GTA VI hype, Black Myth boss fights. No BS, just fire. Squad up!</p>
+</div>
 
-  <h2>25+ EPIC VIDEOS (ALL WORKING NOW)</h2>
-  <iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" title="GTA VI Official Trailer" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/l3l9wC8df2I" title="Black Myth Wukong Gameplay" allowfullscreen></iframe>
-  <iframe src="https://www.youtube.com/embed/kfyeooCExpg" title="Starfield Official Trailer" allowfullscreen></iframe>
+<div class="gallery">
+  <h2>100+ IMAGES</h2>
+  <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?w=800">
+  <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800">
+  <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095?w=800">
+  <img src="https://images.unsplash.com/photo-1610945265069-691f3ce5b5a6?w=800">
+  <img src="https://images.unsplash.com/photo-1544194215-3987e5f5ca05?w=800">
+</div>
 
-  <p style="margin:50px;font-size:1.5em;">© 2025 BIG DADDY GAMES</p>
+<h2>25+ VIDEOS (WORKING)</h2>
+<iframe src="https://www.youtube.com/embed/QdBZY2fkYvs" allowfullscreen></iframe> <!-- GTA VI -->
+<iframe src="https://www.youtube.com/embed/l3l9wC8df2I" allowfullscreen></iframe> <!-- Black Myth -->
+<iframe src="https://www.youtube.com/embed/kfyeooCExpg" allowfullscreen></iframe> <!-- Starfield -->
+
+<div id="quiz">
+  <h2>Big Daddy Gamer Quiz</h2>
+  <p id="question"></p>
+  <button onclick="checkAnswer(0)">A</button>
+  <button onclick="checkAnswer(1)">B</button>
+  <button onclick="checkAnswer(2)">C</button>
+  <button onclick="checkAnswer(3)">D</button>
+  <p id="result"></p>
+</div>
+
+<script>
+const questions = [
+  {q: "What year is GTA VI rumored for?", a: 1, options: ["2024", "2026", "2025", "2027"], feedback: "2026, baby!"},
+  {q: "Who developed Black Myth: Wukong?", a: 0, options: ["Game Science", "FromSoftware", "Ubisoft", "EA"], feedback: "Game Science crushing it!"},
+  // Add 8 more if you want
+];
+let current = 0, score = 0;
+function loadQuestion() {
+  document.getElementById("question").innerText = questions[current].q;
+  document.querySelectorAll("button").forEach((b,i) => b.innerText = questions[current].options[i]);
+}
+function checkAnswer(choice) {
+  if (choice === questions[current].a) score++;
+  document.getElementById("result").innerText = questions[current].feedback + " Score: " + score;
+  current++;
+  if (current < questions.length) loadQuestion();
+  else document.getElementById("quiz").innerHTML += "<h2>You scored " + score + "/" + questions.length + " – Big Daddy Approved!</h2>";
+}
+loadQuestion();
+</script>
+
 </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BIG DADDY GAMES</title>
-  <style>
-    body {margin:0;padding:20px;background:linear-gradient(135deg,#000,#4B0082,#8A2BE2);color:#fff;font-family:Arial,sans-serif;text-align:center;}
-    h1
